[tool.poetry]
name = "databases"
version = "0.7.0"
description = ""
authors = ["Quien Sabe <qs5779@mail.com>"]
readme = "README.md"
packages = [{include = "poetry_databases"}]

[tool.poetry.dependencies]
python = "^3.7"
asyncmy = "==0.2.5"
aiomysql = "==0.1.1"
aiopg = "==1.3.4"
aiosqlite = "==0.17.0"
asyncpg = "==0.26.0"
psycopg2-binary = "==2.9.3"
pymysql = "==1.0.2"


[tool.poetry.group.test.dependencies]
autoflake = "==1.4"
black = "==22.6.0"
isort = "==5.10.1"
mypy = "==0.971"
pytest = "==7.1.2"
pytest-cov = "==3.0.0"
starlette = "==0.20.4"
requests = "==2.28.1"


[tool.poetry.group.doc.dependencies]
mkdocs = "==1.3.1"
mkdocs-material = "==8.3.9"
mkautodoc = "==0.1.0"


[tool.poetry.group.package.dependencies]
twine = "==4.0.1"
wheel = "==0.38.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
